--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
-name = "memery"
-version = "0.1.0"
+name = "memery-normcore"
+version = "0.1.1"
 description = ""
 authors = ["deepfates <deepfates@gmail.com>", "wkrettek <warrenkrettek@gmail.com>"]
 
